# WindWith2021

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  badge_to_type.yaml  config_manager.py  contributors.yaml  data_getter.py  db_config.py  docker-compose.yml  exceptions.py  letter_to_jianshuers.md  log_manager.py  log_service.py  main.py  message_sender.py  pyproject.toml  queue_manager.py  requirements-dev.txt  requirements.txt  status_monitor.py
web_modules/: article_data_export.py  join_queue.py  letter_to_jianshuers.py  thanks.py  utils.py  view_summary.py
wordcloud_assets/: hotwords.txt  stopwords.txt
